@@ -597,7 +597,7 @@ class MavenPomDownloaderTest implements RewriteTest {
         void deriveMetaDataFromFileRepository(@TempDir Path repoPath) throws IOException, MavenDownloadingException {
             Path fred = repoPath.resolve("fred/fred");
 
-            for (String version : Arrays.asList("1.0.0", "1.1.0", "2.0.0")) {
+            for (String version : List.of("1.0.0", "1.1.0", "2.0.0")) {
                 Path versionPath = fred.resolve(version);
                 Files.createDirectories(versionPath);
                 Files.writeString(versionPath.resolve("fred-" + version + ".pom"), "");
@@ -611,7 +611,7 @@ class MavenPomDownloaderTest implements RewriteTest {
               .build();
             MavenMetadata metaData = new MavenPomDownloader(emptyMap(), ctx)
               .downloadMetadata(new GroupArtifact("fred", "fred"), null, List.of(repository));
-            assertThat(metaData.getVersioning().getVersions()).hasSize(3).containsAll(Arrays.asList("1.0.0", "1.1.0", "2.0.0"));
+            assertThat(metaData.getVersioning().getVersions()).hasSize(3).containsAll(List.of("1.0.0", "1.1.0", "2.0.0"));
         }
 
         @SuppressWarnings("ConstantConditions")
